<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address">Dirección:\nBombas Mejorada SA de CV\nCalle 4, No.2368, Col. Zona Industrial\nGuadalajara, Jalisco, México\n\n</string>
    <string name="app_name" >Bombas Mejorada
    </string>
    <string name="action_settings" >No hay opciones
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="bombas_centrifugas_title" >Bombas centrifugas
    </string>
    <string name="btn_pressed_toast" >El boton Aceptar ha sido presionado
    </string>
    <string name="label_accept" >   Aceptar
    </string>
    <string name="label_siguiente" >   Siguiente
    </string>
    <string name="press_accept_bombas">Presione Aceptar para realizar búsqueda de bombas</string>
    <string name="press_accept_hidros">Presione Aceptar para realizar búsqueda de equipos</string>
    <string name="press_accept_incendios">Presione Aceptar para realizar búsqueda de equipos contra incendios</string>
    <string name="hidros_bar_title">Equipos presurizadores</string>
    <string name="incendios_bar_title">Incendios</string>
    <string name="calculadora_tab_title">Conversiones</string>
    <string name="button_clean">Limpiar</string>
    <string name="tab_otros_title">Información</string>
    <string name="service_intro">Llene TODOS los conceptos descritos a continuacion y presione el boton Aceptar para que su solicitud sea recibida por el departamento de servicio de Bombas Mejorada, S.A de C.V.</string>
    <string name="service_1">1.- Equipo Modelo:</string>
    <string name="service_2">2.- No. de Serie:</string>
    <string name="service_3">3.- Presenta la siguiente falla:</string>
    <string name="label_service_4">4.- Domicilio donde esta instalado:</string>
    <string name="service_7">7.- Nombre:</string>
    <string name="service_8">8.- Empresa:</string>
    <string name="service_9">9.-Puesto:</string>
    <string name="service_10">10.- Télefono:</string>
    <string name="service_11">11.- Celular:</string>
    <string name="service_12">12.- Correo:</string>

</resources>
