<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#fffffc">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/service_intro"
            android:id="@+id/text_service_intro"
            android:gravity="center"
            android:textSize="19dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#366e78"
            android:layout_weight="1"
            android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fffffc">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_1"
            android:id="@+id/label_service_1"
            android:textSize="19dp"
            android:textColor="#366e78"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_service_1"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_edit_text_service"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:layout_marginRight="20dp"
            android:capitalize="sentences"/>
    </LinearLayout>
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                  android:background="#fffffc">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_2"
            android:id="@+id/label_service_2"
            android:textSize="19dp"
            android:textColor="#366e78"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_service_2"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_edit_text_service"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:layout_marginRight="20dp"
            android:capitalize="sentences"/>
</LinearLayout>
</LinearLayout>

