<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fffffc">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fffffc">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_7"
                android:id="@+id/label_service_7"
                android:textSize="19dp"
                android:textColor="#366e78"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txt_service_7"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_edit_text_service"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:capitalize="sentences"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fffffc">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fffffc">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_8"
                android:id="@+id/label_service_8"
                android:textSize="19dp"
                android:textColor="#366e78"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_9"
                android:id="@+id/label_service_9"
                android:textSize="19dp"
                android:textColor="#366e78"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fffffc">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txt_service_8"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_edit_text_service"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:capitalize="sentences"
                android:layout_weight="2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txt_service_9"
                android:background="@drawable/rounded_edit_text_service"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:capitalize="sentences"
                android:layout_weight="2"
                android:layout_marginLeft="20dp"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#fffffc">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fffffc">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_10"
                    android:id="@+id/label_service_10"
                    android:textSize="19dp"
                    android:textColor="#366e78"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/service_11"
                    android:id="@+id/label_service_11"
                    android:textSize="19dp"
                    android:textColor="#366e78"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#fffffc">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/txt_service_10"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_edit_text_service"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:capitalize="sentences"
                    android:layout_weight="2"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/txt_service_11"
                    android:background="@drawable/rounded_edit_text_service"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:capitalize="sentences"
                    android:layout_weight="2"
                    android:layout_marginLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_12"
                    android:id="@+id/label_service_12"
                    android:textSize="19dp"
                    android:textColor="#366e78"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/txt_service_12"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_edit_text_service"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:capitalize="sentences"/>
        </LinearLayout>

    </LinearLayout>

